# autmc

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  rust-linux.yml
public/: global.css  index.html
src/: App.svelte  Home.svelte  Instances.svelte  NewInstance.svelte  downloadfmt.ts  image.ts  lazyload.ts  logstore.ts  manifest.ts  menu.ts  selectable.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/autmc-assets/: Cargo.toml
src-tauri/autmc-assets/src/: consts.rs  fabric.rs  forge.rs  lib.rs  vanilla.rs
src-tauri/autmc-assets/src/fabric/: manifest.rs
src-tauri/autmc-assets/src/forge/: manifest.rs
src-tauri/autmc-assets/src/vanilla/: assets.rs  deserializers.rs  manifest.rs
src-tauri/autmc-authentication/: Cargo.toml
src-tauri/autmc-authentication/src/: authenticate.rs  consts.rs  error.rs  lib.rs
src-tauri/autmc-downloader/: Cargo.toml  cachegrind.out.7024
src-tauri/autmc-downloader/src/: main.rs
src-tauri/autmc-log/: Cargo.toml
src-tauri/autmc-log/src/: lib.rs
src-tauri/capabilities/: migrated.json
src-tauri/resources/: libraries_test_1.19.2.json
src-tauri/src/: auth.rs  authentication.rs  commands.rs  consts.rs  downloader.rs  loader.rs  main.rs  option_parser.rs  resource_manager.rs  state.rs  tests.rs  web.rs  web_services.rs
src-tauri/src/state/: account_manager.rs  instance_manager.rs  resource_manager.rs
src-tauri/src/web_services/: authentication.rs  consts.rs  downloader.rs  manifest.rs  resources.rs
src-tauri/src/web_services/manifest/: fabric.rs  forge.rs  vanilla.rs
src-tauri/src/web_services/modpack/: curseforge.rs  modrinth.rs
src/account/: AccountContainer.svelte  Login.svelte  SwitchAccounts.svelte
src/components/: CanvasImage.svelte  HamburgerButton.svelte  Head.svelte  Home.svelte  Loader.svelte  Login.svelte  LoginButton.svelte  MenuButton.svelte  NewInstance.svelte  NewInstanceModal.svelte  RightClickMenu.svelte  Transition.svelte
src/components/Home/: Home.svelte  Instances.svelte  Logs.svelte
src/components/Home/Logs/: DropdownMenu.svelte  Logs.svelte
src/components/Home/Menu/: Menu.svelte  MenuNavbar.svelte
src/components/HomeMenu/: Home.svelte  Instances.svelte  Logs.svelte  Menu.svelte  MenuButton.svelte  Navbar.svelte
src/components/Loader/: Loading.svelte
src/components/Modal/: NewInstance.svelte  NewInstanceModal.svelte  VanillaOptions.svelte  VanillaVersionTable.svelte  VersionTable.svelte
src/components/Modal/ManageInstanceModal/: ManageInstance.svelte
src/components/Modal/NewInstanceModal/: ImportZip.svelte  NewInstance.svelte  VanillaOptions.svelte  VanillaVersionTable.svelte  VersionTable.svelte
src/components/Modal/ViewImageModal/: ViewImageModal.svelte
src/components/Screenshots/: ScreenshotRow.svelte  Screenshots.svelte
src/components/Tabbar/: Tab.svelte  TabBar.svelte
src/components/buttons/: SidebarButton.svelte  SvgButton.svelte  SvgCircleHoverButton.svelte  SvgHoverButton.svelte
src/components/dropdown/: DropdownMenu.svelte
src/components/input/: CheckboxInput.svelte  TextBoxInput.svelte
src/components/loader/: CircleLoader.svelte
src/components/new-instance/: NewInstanceSettings.svelte  NewInstanceVersion.svelte  SettingsHeader.svelte  VanillaContent.svelte
src/components/new-instance/thirdparty-content/: BrowseCurseforge.svelte  CurseforgeModpackRow.svelte
src/components/newinstance/: BrowseCurseforge.svelte  ImportZip.svelte  NewInstance.svelte  NewInstanceSettings.svelte  NewInstanceVersion.svelte  VanillaContent.svelte
src/components/virtual-list/: VirtualList.svelte  VirtualListRow.svelte
src/components/virtuallist/: VirtualListRow.svelte
src/logs/: Logs.svelte  LogsHeader.svelte
src/modal/: ErrorModal.svelte  MenuModal.svelte  Modal.svelte
src/modal/MenuModal/: MenuModal.svelte
src/modal/RightClickModal/: RightClickModal.svelte
src/modal/SettingsModal/: SettingsModal.svelte
src/new-instance/: ImportZip.svelte  NewInstanceSettings.svelte  NewInstanceVersion.svelte  SettingsHeader.svelte  VanillaContent.svelte
src/new-instance/thirdparty-content/: BrowseCurseforge.svelte  CurseforgeModpackRow.svelte
src/new-instance/thirdparty-content/curseforge/: CurseforgePreviewPage.svelte
src/screenshots/: ScreenshotRow.svelte  Screenshots.svelte
src/server/: ServerStatus.svelte  Servers.svelte
src/store/: canvascache.ts  categorystore.ts  instancestatetore.ts  instancestore.ts  logstore.ts  manifeststore.ts  screenshotstore.ts
