[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["path-all", "protocol-asset"] }
reqwest = { version = "0.11.14", features = ["json"] }
phf = { version = "0.11", features = ["macros"] }
futures = { version = "0.3.26", features = ["thread-pool"] }
indexmap = { version = "1.9.2", features = ["serde-1"] }
rust-crypto = "0.2.36"
xmltree = "0.10.3"
keyring = "2.0.1"
tempdir = "0.3.7"
chrono = "0.4.23"
image = "0.24.5"
regex = "1.7.1"
bytes = "1.4.0"
fern = "0.6.1"
log = "0.4.17"
url = "2.3.1"
zip = "0.6.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
