[package]
name = "autmc-assets"
version = "0.1.0"
edition = "2021"

[lib]
name = "autmc_assets"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.autmc-log]
path = "../autmc-log"

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
indexmap = "2.2.5"