[package]
name = "autmc-authentication"
version = "0.1.0"
edition = "2021"

[lib]
name = "autmc_authentication"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.autmc-log]
path = "../autmc-log"

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
log = "0.4.20"
phf = "0.11.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
