[package]
name = "autmc-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "autmc_downloader"
# path = "src/lib.rs"

[dependencies.autmc-assets]
path = "../autmc-assets"

[dependencies]
reqwest = "0.11.24"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.28", features = ["thread-pool"] }
bytes = "1.4.0"